Added Houdsdorf coefficient

--- a/lab1/Project1.ipynb
+++ b/lab1/Project1.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#img_numbers = ['01', '07', '10', '11', '12', '13', '14']\n",
-    "img_numbers = ['07']\n",
+    "img_numbers = ['01', '07', '10', '11', '12', '13', '14']\n",
+    "#img_numbers = ['13']\n",
     "images = []"
    ]
   },
@@ -43,7 +43,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(512, 512, 145)\n"
+      "(512, 512, 133)\n",
+      "(512, 512, 145)\n",
+      "(512, 512, 277)\n",
+      "(512, 512, 149)\n",
+      "(512, 512, 133)\n",
+      "(512, 512, 137)\n",
+      "(512, 512, 133)\n"
      ]
     }
    ],
@@ -140,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11396\\4289163537.py:12: UserWarning: Any labeled images will be returned as a boolean array. Did you mean to use a boolean array?\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_17064\\2573406624.py:18: UserWarning: Any labeled images will be returned as a boolean array. Did you mean to use a boolean array?\n",
       "  air_regions_filtered = morphology.remove_small_holes(\n"
      ]
     },
@@ -148,6 +154,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Segmentation finished\n",
+      "Segmentation finished\n",
+      "Segmentation finished\n",
+      "Segmentation finished\n",
+      "Segmentation finished\n",
+      "Segmentation finished\n",
       "Segmentation finished\n"
      ]
     }
@@ -160,6 +172,12 @@
     "\n",
     "for foo, body_mask in zip(images, body_masks):\n",
     "    binary_img = (foo > -320).astype(int)\n",
+    "\n",
+    "    foo[body_mask == 0] = 0\n",
+    "\n",
+    "    binary_img = morphology.binary_closing(binary_img, morphology.ball(6))\n",
+    "    \n",
+    "    #CImg(binary_img).display()\n",
     "\n",
     "    binary_img = 1-binary_img\n",
     "    air_regions = np.where(body_mask == 0, 0, binary_img)\n",
@@ -174,15 +192,22 @@
     "        min_size=135\n",
     "    )\n",
     "\n",
-    "    closed_mask = morphology.binary_closing(air_regions, morphology.ball(5))\n",
+    "    #CImg(air_regions_filtered).display()\n",
+    "\n",
+    "    #closed_mask = morphology.binary_closing(air_regions_filtered, morphology.ball(5))\n",
     "    \n",
-    "    label_image, num_features = morphology.label(closed_mask, connectivity=2, return_num=True)\n",
+    "    #CImg(closed_mask).display()\n",
+    "    label_image, num_features = morphology.label(air_regions_filtered, connectivity=2, return_num=True)\n",
     "    \n",
     "    min_lung_size = 1000  # Minimum size for lung regions\n",
     "    filtered_mask = morphology.remove_small_objects(label_image, min_size=min_lung_size)\n",
     "    filtered_mask[filtered_mask != 0] = 1\n",
     "    \n",
-    "    opened_lungs = morphology.opening(filtered_mask, morphology.ball(7))\n",
+    "    #opened_lungs = morphology.opening(filtered_mask, morphology.ball(7))\n",
+    "    opened_lungs = filtered_mask.copy()\n",
+    "\n",
+    "    #for _ in range(5):\n",
+    "    #    opened_lungs = morphology.binary_erosion(opened_lungs, morphology.ball(2))\n",
     "\n",
     "    edges = segmentation.find_boundaries(opened_lungs, mode='inner')\n",
     "    \n",
@@ -204,6 +229,18 @@
     "    left_marker = np.isin(label_image, left_lungs).astype(int)\n",
     "    right_marker = np.isin(label_image, right_lungs).astype(int)\n",
     "\n",
+    "    left_marker = morphology.binary_closing(left_marker, morphology.ball(5))\n",
+    "    left_marker = morphology.remove_small_holes(\n",
+    "        left_marker, \n",
+    "        area_threshold=135\n",
+    "    )\n",
+    "    \n",
+    "    right_marker = morphology.binary_closing(right_marker, morphology.ball(5))\n",
+    "    right_marker = morphology.remove_small_holes(\n",
+    "        right_marker, \n",
+    "        area_threshold=135\n",
+    "    )\n",
+    "    \n",
     "    left_markers.append(left_marker)\n",
     "    right_markers.append(right_marker)\n",
     "\n",
@@ -212,18 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "52046739-62d4-4bd5-88c4-22db273c04a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CImg(left_marker).display();\n",
-    "CImg(right_marker).display();"
+    "#CImg(left_marker).display();\n",
+    "#CImg(right_marker).display();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6c8a5574-925f-496e-8246-c8fd7ef624bc",
    "metadata": {},
    "outputs": [
@@ -231,7 +268,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(512, 512, 133)\n",
+      "Segmentation finished\n",
       "(512, 512, 145)\n",
+      "Segmentation finished\n",
+      "(512, 512, 277)\n",
+      "Segmentation finished\n",
+      "(512, 512, 149)\n",
+      "Segmentation finished\n",
+      "(512, 512, 133)\n",
+      "Segmentation finished\n",
+      "(512, 512, 137)\n",
+      "Segmentation finished\n",
+      "(512, 512, 133)\n",
       "Segmentation finished\n"
      ]
     }
@@ -266,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e57b1bb1-5dad-4d2d-8361-f37a53b64cda",
    "metadata": {},
    "outputs": [
@@ -274,10 +323,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "For image number  01\n",
+      "Dice coefficient for the right lung:  0.9475874669847927\n",
+      "Dice coefficient for the left lung:  0.964159512505226\n",
+      "Dice coefficient for body mask:  0.9985153836479485\n",
       "For image number  07\n",
-      "Dice coefficient for the right lung:  0.0\n",
-      "Dice coefficient for the left lung:  0.6476069042247554\n",
-      "Dice coefficient for body mask:  0.9991545447929256\n"
+      "Dice coefficient for the right lung:  0.8830347599918188\n",
+      "Dice coefficient for the left lung:  0.9216215251868204\n",
+      "Dice coefficient for body mask:  0.9991545447929256\n",
+      "For image number  10\n",
+      "Dice coefficient for the right lung:  0.9256671913592096\n",
+      "Dice coefficient for the left lung:  0.9265342273288961\n",
+      "Dice coefficient for body mask:  0.9969642943586994\n",
+      "For image number  11\n",
+      "Dice coefficient for the right lung:  0.8070418688683011\n",
+      "Dice coefficient for the left lung:  0.943442773164921\n",
+      "Dice coefficient for body mask:  0.9983422439086611\n",
+      "For image number  12\n",
+      "Dice coefficient for the right lung:  0.8830732358750111\n",
+      "Dice coefficient for the left lung:  0.8794795938486257\n",
+      "Dice coefficient for body mask:  0.9963606924621226\n",
+      "For image number  13\n",
+      "Dice coefficient for the right lung:  0.9517368756098844\n",
+      "Dice coefficient for the left lung:  0.9538292525199872\n",
+      "Dice coefficient for body mask:  0.9911404115380155\n",
+      "For image number  14\n",
+      "Dice coefficient for the right lung:  0.9269927462604137\n",
+      "Dice coefficient for the left lung:  0.924558144254029\n",
+      "Dice coefficient for body mask:  0.9974127975022131\n"
      ]
     }
    ],
@@ -305,28 +378,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9fc87006-22ea-4a25-9196-a0ceeb28e08e",
+   "execution_count": 10,
+   "id": "89417607-ad88-433f-86bf-4f5da7eed864",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'CImg' has no attribute 'display'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[9], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mCImg\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdisplay\u001B[49m()\n",
-      "\u001B[1;31mAttributeError\u001B[0m: type object 'CImg' has no attribute 'display'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For image number 01\n",
+      "Houdsdorf coefficient for the right lung:   10.400480758118826\n",
+      "Houdsdorf coefficient for the left lung:   12.38587905640936\n",
+      "Houdsdorf coefficient for the body:   0.7\n",
+      "For image number 07\n",
+      "Houdsdorf coefficient for the right lung:   18.424168909342963\n",
+      "Houdsdorf coefficient for the left lung:   19.10628168953865\n",
+      "Houdsdorf coefficient for the body:   0.0\n",
+      "For image number 10\n",
+      "Houdsdorf coefficient for the right lung:   12.869343417595163\n",
+      "Houdsdorf coefficient for the left lung:   84.6480360079311\n",
+      "Houdsdorf coefficient for the body:   0.9899494936611665\n",
+      "For image number 11\n",
+      "Houdsdorf coefficient for the right lung:   61.1781823855531\n",
+      "Houdsdorf coefficient for the left lung:   46.59463488428684\n",
+      "Houdsdorf coefficient for the body:   0.7\n",
+      "For image number 12\n",
+      "Houdsdorf coefficient for the right lung:   38.32531800259458\n",
+      "Houdsdorf coefficient for the left lung:   21.843534512527956\n",
+      "Houdsdorf coefficient for the body:   2.8\n",
+      "For image number 13\n",
+      "Houdsdorf coefficient for the right lung:   66.27307145439994\n",
+      "Houdsdorf coefficient for the left lung:   101.01791920248604\n",
+      "Houdsdorf coefficient for the body:   17.75049295090139\n",
+      "For image number 14\n",
+      "Houdsdorf coefficient for the right lung:   40.65870140572618\n",
+      "Houdsdorf coefficient for the left lung:   65.81132121451445\n",
+      "Houdsdorf coefficient for the body:   0.9899494936611665\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for num, body_mask, body_target, left_mask, left_target, right_mask, right_target in zip(img_numbers, body_masks, body_targets, left_markers, left_targets, right_markers, right_targets): \n",
+    "    right_target = right_target.astype(bool)\n",
+    "    left_target = left_target.astype(bool)\n",
+    "    left_marker = left_marker.astype(bool)\n",
+    "    right_marker = right_marker.astype(bool)\n",
+    "    body_mask = body_mask.astype(bool)\n",
+    "    body_target = body_target.astype(bool)\n",
+    "\n",
+    "    spacing = [0.7, 0.7, 2.5]\n",
+    "    distances_body = metrics.compute_surface_distances(body_target, body_mask, spacing)\n",
+    "    distances_left = metrics.compute_surface_distances(left_target, left_mask, spacing)\n",
+    "    distances_right = metrics.compute_surface_distances(right_target, right_mask, spacing)\n",
+    "\n",
+    "    print(\"For image number\", num)\n",
+    "    print(\"Houdsdorf coefficient for the right lung:  \", metrics.compute_robust_hausdorff(distances_right, 95))\n",
+    "    print(\"Houdsdorf coefficient for the left lung:  \", metrics.compute_robust_hausdorff(distances_left , 95))\n",
+    "    print(\"Houdsdorf coefficient for the body:  \", metrics.compute_robust_hausdorff(distances_body, 95))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f80dab-ba1d-4da4-9c9d-e3fe4f68a8c0",
+   "id": "6c0d3f18-5da4-49ed-9d98-e721f5309db0",
    "metadata": {},
    "outputs": [],
    "source": []
