Updated blob tracking

--- a/lab3/Blob_tracking.ipynb
+++ b/lab3/Blob_tracking.ipynb
@@ -18,25 +18,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = \"data/Data/kaniula1.avi\"\n",
-    "cap = cv2.VideoCapture(video_path)\n",
+    "# video_path = \"data/Data/kaniula1.avi\"\n",
+    "# cap = cv2.VideoCapture(video_path)\n",
     "\n",
-    "if not cap.isOpened():\n",
-    "    print(\"Error: Could not open the video file.\")\n",
-    "    exit()\n",
+    "# if not cap.isOpened():\n",
+    "#     print(\"Error: Could not open the video file.\")\n",
+    "#     exit()\n",
     "\n",
-    "ret, first_frame = cap.read()\n",
+    "# ret, first_frame = cap.read()\n",
     "\n",
-    "if not ret:\n",
-    "    print(\"Error: Could not read the first frame.\")\n",
-    "    cap.release()\n",
-    "    exit()\n",
+    "# if not ret:\n",
+    "#     print(\"Error: Could not read the first frame.\")\n",
+    "#     cap.release()\n",
+    "#     exit()\n",
     "\n",
-    "cap.release()\n",
+    "# cap.release()\n",
     "\n",
-    "cv2.imshow(\"First Frame\", first_frame)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "# cv2.imshow(\"First Frame\", first_frame)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
@@ -2418,6 +2418,9 @@
     "    filtered_image = filter_blobs(masked_image)\n",
     "    filled_image = fill_blobs(filtered_image)\n",
     "    result_image, centroid_positions = detect_rightmost_blobs(filled_image, frame)\n",
+    "\n",
+    "    if centroid_positions is None or len(centroid_positions) != 2:\n",
+    "        continue\n",
     "\n",
     "    if(in_bounds(previous_centroid, centroid_positions[0])):\n",
     "        print(\"Tracking the blob, frame number: \", frame_counter)\n",
