Updated blob tracking

--- a/lab3/Blob_tracking.ipynb
+++ b/lab3/Blob_tracking.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7f119abf-0e2d-47cc-8970-0c3358ffc325",
    "metadata": {},
    "outputs": [
@@ -2359,7 +2359,27 @@
       "Tracking the blob, frame number:  2135\n",
       "Tracking the blob, frame number:  2136\n",
       "Tracking the blob, frame number:  2137\n",
-      "Tracking the blob, frame number:  2138\n"
+      "Tracking the blob, frame number:  2138\n",
+      "Tracking the blob, frame number:  2139\n",
+      "Tracking the blob, frame number:  2140\n",
+      "Tracking the blob, frame number:  2141\n",
+      "Tracking the blob, frame number:  2142\n",
+      "Tracking the blob, frame number:  2143\n",
+      "Tracking the blob, frame number:  2144\n",
+      "Tracking the blob, frame number:  2145\n",
+      "Tracking the blob, frame number:  2146\n",
+      "Tracking the blob, frame number:  2147\n",
+      "Tracking the blob, frame number:  2148\n",
+      "Tracking the blob, frame number:  2149\n",
+      "Tracking the blob, frame number:  2150\n",
+      "Tracking the blob, frame number:  2151\n",
+      "Tracking the blob, frame number:  2152\n",
+      "Tracking the blob, frame number:  2153\n",
+      "Tracking the blob, frame number:  2154\n",
+      "Tracking the blob, frame number:  2155\n",
+      "Tracking the blob, frame number:  2156\n",
+      "Tracking the blob, frame number:  2157\n",
+      "Tracking the blob, frame number:  2158\n"
      ]
     }
    ],
@@ -7597,7 +7617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2a8a3cfa-07d5-4ef0-9453-43b91084564b",
    "metadata": {},
    "outputs": [
@@ -7608,7 +7628,7 @@
       "+-------+------------+------------------+------+\n",
       "| movie | real shift | calculated shift | DIFF |\n",
       "+-------+------------+------------------+------+\n",
-      "|   1   |     61     |        74        |  13  |\n",
+      "|   1   |     61     |        65        |  4   |\n",
       "|   2   |    -27     |       -23        |  4   |\n",
       "|   3   |    -21     |       -16        |  5   |\n",
       "+-------+------------+------------------+------+\n"
@@ -7619,7 +7639,7 @@
     "from prettytable import PrettyTable\n",
     "\n",
     "data = [\n",
-    "    {\"movie\": 1, \"real_shift\": 61, \"calculated_shift\": 74},\n",
+    "    {\"movie\": 1, \"real_shift\": 61, \"calculated_shift\": 65},\n",
     "    {\"movie\": 2, \"real_shift\": -27, \"calculated_shift\": -23},\n",
     "    {\"movie\": 3, \"real_shift\": -21, \"calculated_shift\": -16},\n",
     "]\n",
